--- a/.screenrc
+++ b/.screenrc
@@ -1,2 +1,13 @@
 # Disable the startup message
 startup_message off
+term screen-256color
+
+# Use X scrolling mechanism
+termcapinfo xterm* ti@:te@
+
+# Turn your hardstatus line into a dynamic urxvt|xterm|aterm window title 
+backtick 1 5 5 true
+termcapinfo rxvt* 'hs:ts=\E]2;:fs=\007:ds=\E]2;\007'
+hardstatus string "screen (%n: %t)"
+caption string "%{= kw}%Y-%m-%d;%c %{= kw}%-Lw%{= kG}%{+b}[%n %t]%{-b}%{= kw}%+Lw%1`"
+caption always
