--- a/.screenrc
+++ b/.screenrc
@@ -8,6 +8,6 @@ termcapinfo xterm* ti@:te@
 # Turn your hardstatus line into a dynamic urxvt|xterm|aterm window title 
 backtick 1 5 5 true
 termcapinfo rxvt* 'hs:ts=\E]2;:fs=\007:ds=\E]2;\007'
-hardstatus string "screen (%n: %t)"
+hardstatus string "@%H (%n: %t)"
 caption string "%{= kw}%Y-%m-%d;%c %{= kw}%-Lw%{= kG}%{+b}[%n %t]%{-b}%{= kw}%+Lw%1`"
 caption always
