Removing git auto fixing new line and whitespace

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,9 +26,9 @@
 	# Undo a `git push`
 	undopush = push -f origin HEAD^:master
 
-[apply]
+#[apply]
 	# Detect whitespace errors when applying a patch
-	whitespace = fix
+	#whitespace = fix
 
 [core]
 	# Use custom `.gitignore` and `.gitattributes`
