Whitelisting all hosts in ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -20,7 +20,7 @@
  Host *github.com
    ForwardAgent yes
 
- Host *.flipkart.com 
+ Host *
    SendEnv LANG LC_*
    ForwardAgent yes
 #   ForwardX11 no
