Removing obsolte setting

--- a/.wgetrc
+++ b/.wgetrc
@@ -14,7 +14,7 @@ tries = 3
 retry_connrefused = on
 
 # Use the last component of a redirection URL for the local file name
-trust_server_names = on
+#trust_server_names = on
 
 # Follow FTP links from HTML documents by default
 follow_ftp = on
